--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 exthtml/js/*
+./bulma-styles/*.map
+./bulma-styles/*.css
+
 css-all/node_modules/bulma/sass/base/*.css
 css-all/node_modules/bulma/sass/components/*.css
 css-all/node_modules/bulma/sass/elements/*.css
